-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b105
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8245082 | openjdk8u262 | Martin Doerr | P4 | Resolved | Fixed | b03 |
| JDK-8254873 | 8u281 | Fairoz Matte | P4 | Resolved | Fixed | b03 |
| JDK-8257286 | emb-8u281 | Fairoz Matte | P4 | Resolved | Fixed | team |
The description of precedence edges in node.hpp says:
"They are unordered and not duplicated; they have no embedded NULLs."
Some functions in the current implementation violate this specification.
"They are unordered and not duplicated; they have no embedded NULLs."
Some functions in the current implementation violate this specification.
- backported by
-
JDK-8245082 C2: Precedence edges specification violated
-
- Resolved
-
-
JDK-8254873 C2: Precedence edges specification violated
-
- Resolved
-
-
JDK-8257286 C2: Precedence edges specification violated
-
- Resolved
-