8146612: C2: Precedence edges specification violated

Reviewed-by: kvn